# dddpy

./: README.md  pyproject.toml
.github/workflows/: main.yml
ddd/: __init__.py
dddpy/: __init__.py
dddpy/bases/: __init__.py
dddpy/bases/common/: __init__.py  abstract.py  primitive.py
dddpy/bases/domain/: __init__.py
example/: __init__.py
tests/test_dddpy/: __init__.py
tests/test_dddpy/bases/common/: __init__.py  test_primitive.py
tests/test_dddpy/bases/domain/: __init__.py
tests/test_example/: __init__.py
