[tool.poetry]
name = "dddpy"
version = "0.0.1"
description = "A framework to support ddd python projects"
authors = ["Yuichiro Smith <contact@yu-smith.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.2"
Inject = "^4.3.1"
Faker = "^4.16.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
